@@ -127,7 +127,6 @@ MODULES = \
 ../Modules/fft_base.o \
 ../Modules/fft_scalar.o \
 ../Modules/fft_types.o \
-../Modules/formats.o \
 ../Modules/functionals.o \
 ../Modules/input_parameters.o \
 ../Modules/io_base.o \
@@ -135,12 +134,10 @@ MODULES = \
 ../Modules/io_global.o \
 ../Modules/ions_base.o \
 ../Modules/kind.o \
-../Modules/minimization_routines.o \
 ../Modules/mp_buffers.o \
 ../Modules/mp_global.o \
 ../Modules/mp_wave.o \
 ../Modules/mp.o \
-../Modules/neb_variables.o \
 ../Modules/parallel_include.o \
 ../Modules/parameters.o \
 ../Modules/parser.o \
